# SegLeaf

./: .pre-commit-config.yaml  Makefile  pyproject.toml  requirements.txt
evaluation/src/: generate_groundtruth.py  generate_metrics.py  segment_leaves.py
src/: __init__.py  app.py  cli.py  config.py
src/gui/: __init__.py  class_config_tab.py  leaf_segmenter_tab.py  leaf_splitter_tab.py  main_window.py  segmentation_stats_frame.py
src/image_processing/: __init__.py  batch_processor.py  leaf_segmenter.py  leaf_splitter.py
src/utils/: __init__.py  color_map_utils.py
