[project]
name = "segleaf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.4.0",
    "ruff>=0.14.4",
]

[tool.ruff]
target-version = "py310"
line-length = 119

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",   # Checks for the absence of trailing commas. (conflict with the formatter)
    "D203",     # Checks for docstrings on class definitions that are not preceded by a blank line. (conflict with D211)
    "D212",     # Checks for docstring summary lines that are not positioned on the first physical line of the docstring. (conflict with D213)
]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"              # Like Black, use double quotes for strings.
indent-style = "space"              # Like Black, indent with spaces, rather than tabs.
skip-magic-trailing-comma = false   # Like Black, respect magic trailing commas.
line-ending = "auto"                # Like Black, automatically detect the appropriate line ending.
